# rdma_practice

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
libibverbs/: CMakeLists.txt  device_list.cpp  devinfo.cpp  pingpong.cpp  rc_pingpong.cpp  srq_pingpong.cpp  utils.cpp
libibverbs/include/: pingpong.h  utils.hpp
libibverbs/scripts/: launch_rc_pingpong_client.sh  launch_rc_pingpong_server.sh  launch_srq_pingpong_client.sh  launch_srq_pingpong_server.sh
